# checkdavid

./: .gitignore  README.md  requirements.txt  setup.cfg  webpage_for_testing.html
database/: cities_around_the_world.db
docs/: flights_db.drawio  tarkov_market.drawio  userstory_01.md  userstory_02.md  userstory_03.md  userstory_04.md  userstory_05.md  userstory_06.md  userstory_07.md  userstory_08.md  userstory_09.md  userstory_10.md  userstory_11.md  userstory_12.md
scripts/: __init__.py  capitals.py  downloader.py  gui.py  main.py  models.py  style.kv  table_management.py  test.py
src/: downloader.py  gui.py  main.py  models.py  table_management.py
tests/: test.html  test_bs4.py  test_crud.py  test_download.py  tkinter-scrollbar-test.py  tkinter-test.py
