[metadata]
name = checkdavid
author = David Torbics
author_email = torbic190220@sr.htlweiz.at
description = a quick project for the first semester
version = 1.0.0
url = https://github.com
keywords = logging
        pytest
        file
        parser
        output
        input
	restful
	rest
	fastapi

license_file =
        LICENSE.txt

[options]
python_requires >= 3.8
packages = find:
zip_safe = False
install_requires =
	pydantic
	sqlalchemy
	union
	uvicorn
	websockets
	wheel
  autopep8
  doq
  fastapi
  flake8
  flake8-builtins
  flake8-eradicate
  flake8-isort
  flake8-spellcheck
  flake8-variables-names
  isort
  pytest
  rope
  sqlalchemy
  selenium
  tkinter
  bs4
  lxml


[flake8]
max-line-length=99
exclude = venv
docstring-convention = numpy

[tool:pytest]
testpaths = tests
log_level = info
